chore: yarn devでfrontとserverを同時に立ち上げる

--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -1,9 +1,24 @@
 {
   "name": "front",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/front",
+  "sourceRoot": "apps/front/src",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project front --web",
-  "targets": {}
+  "targets": {
+    "serve": {
+      "executor": "@nx/next:server",
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 3001
+      },
+      "configurations": {
+        "development": {
+          "buildTarget": "front:build:development"
+        },
+        "production": {
+          "buildTarget": "front:build:production"
+        }
+      }
+    }
+  }
 }
